fix loi z-index

--- a/src/components/Modal/ModalStyle.scss
+++ b/src/components/Modal/ModalStyle.scss
@@ -7,7 +7,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    
+    z-index: 1;
 }
 
 .modal__overlay{
@@ -22,5 +22,4 @@
     margin: auto;
     border-radius: 10px;
     position: relative;
-    z-index: 3;
 }
